--- a/index.html
+++ b/index.html
@@ -5,25 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de adoção de Salsicha</title>
-    <link rel="stylesheet" href="../Pagina_Adote_Furao/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
     <header>
-
-
+        <h1>Adote um Salsicha</h1>
     </header>
 
     <main>
+        <section class="card-container" id="card-container">
+            <div class="card">
+                <h3>Luna</h3>
+                <img src="assets/img/salsicha_filhote.jfif" alt="Imagem de filhote de Salsicha">
+                <button>Adotar</button>
+            </div>
+            <div class="card">
+                <h3>Teo</h3>
+                <img src="assets/img/salsicha2.jfif" alt="Imagem de filhote de Salsicha">
+                <button>Adotar</button>
+            </div>
+            <div class="card">
+                <h3>Sofya</h3>
+                <img src="assets/img/salsicha3.jfif" alt="Imagem de filhote de Salsicha">
+                <button>Adotar</button>
+            </div>
 
-
+        </section>
     </main>
 
     <footer>
-
-        <p> Desenvolvido no IOS por Kethleen Gonçalves💜</p>
+        <p>Desenvolvido no IOS por Kethleen Gonçalves 💜</p>
     </footer>
 
+    <!-- JS deve ser chamado assim -->
+    <script src="../Pagina_Adote_Furao/js/script.js"></script>
 </body>
 
 </html>
